--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <h1>Hello World!</h1>
+<p>
 <a href="https://codepen.io/mdneilso/pen/pOaPdL">Link to codepen on Prog01</a>
+<a href="https://vdrive.svsu.edu/htcomnet/Handlers/Download.ashx?action=download&file=Home%20Folder%2Fpublic_html%2Fprog01.html">Link to VDrive File on Prog01</a>
+<a href="https://cis255.wordpress.com/picking-a-cat-michael-neilson/">Link to csis on Prog01</a>
+I feel that the one that was best for hosting articles so far was the codepen csis page. While the other ones seemed easier
+  for getting links to pages sorted, wordpen gave a way to more clearly implement things that I wanted done outside of my
+  currently limited knowledge of html writing. In the future, I may have a different opinion after I have learned more, but
+  for now wordpen was much easier to implement than the other available options for articles.
+</p>
