--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ I feel that the one that was best for hosting articles so far was the codepen cs
   currently limited knowledge of html writing. In the future, I may have a different opinion after I have learned more, but
   for now wordpen was much easier to implement than the other available options for articles.
 </p>
+<h1>Project 6</h1>
