--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@ I feel that the one that was best for hosting articles so far was the codepen cs
   for now wordpen was much easier to implement than the other available options for articles.
 </p>
 <h1>Project 6</h1>
+<a href="https://codepen.io/mdneilso/pen/VVNZqE">Link to codepen on Prog06</a>
